# repos-cli

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
legal/: CCLA.md  COMMERCIAL_LICENSE.md  ICLA.md  LICENSE_FAQ.md
src/repos_cli/: __init__.py  cli.py  config.py  db.py  executor.py  init.py  interfaces.py  kernel.py  store.py  ui.py  utils.py
src/repos_cli/defaults/: conda.yaml  docker.yaml  git.yaml  node.yaml  os.yaml  python.yaml  ruby.yaml  system.yaml
tests/: test_alias_execution.py  test_cli.py  test_config.py  test_db.py  test_db_commands.py  test_executor.py  test_init.py  test_interfaces.py  test_kernel.py  test_store.py  test_ui.py  test_utils.py
